modify font and vertical align

--- a/index.html
+++ b/index.html
@@ -6,11 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Toboolist</title>
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600&display=swap" rel="stylesheet">
 </head>
 <body>
     <header id="site_header">
         <div class="site_logo">
-            <img src="./img/boolean_logo.jpeg" alt="" class="logo">
+            <img src="./img/boolean_logo.png" alt="" class="logo">
             <strong class="logo_text">Toboolist</strong>
         </div>
     </header>
