complete site correction

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <div class="site_logo">
             <img src="./img/boolean_logo.png" alt="" class="logo">
             <strong class="logo_text">Toboolist</strong>
+            <span id="copyright">&copy;</span>
         </div>
     </header>
     <!-- /#site_header -->
@@ -34,10 +35,13 @@
                 </h2>
                 <ul class="style_none">
                     <li>
-                        <span class="icon_check">
+                        <span class="icon check">
                             &#10003;
                         </span>
                         Quarterly Newsletter
+                        <span class="badge badge_editorial">
+                            Editorial
+                        </span>
                     </li>
                 </ul>
             </section>
@@ -51,7 +55,7 @@
                 </h2>
                 <ul class="style_none">
                     <li>
-                        <span class="icon_check">
+                        <span class="icon check">
                             &#10003;
                         </span>
                         Recruiting Blog Post
@@ -59,13 +63,85 @@
                             Editorial
                         </span>
                     </li>
+                    <li>
+                        <span class="icon check">
+                            &#10003;
+                        </span>
+                        Mobile app launch
+                        <span class="badge badge_goals">
+                            Q1 Goals
+                        </span>
+                    </li>
+                    <li>
+                        <span class="icon cross">
+                            &#10007;
+                        </span>
+                        Interview John H. 
+                        <span class="badge badge_recruiting">
+                            Recruiting
+                        </span>
+                    </li>
+                    <li>
+                        <span class="icon check">
+                            &#10003;
+                        </span>
+                        Summit update to mobile storefronts
+                        <span class="badge badge_mobile">
+                            Mobile
+                        </span>
+                    </li>
                 </ul>
             </section>
             <!-- /.today -->
-            <section class="upcoming"></section>
+            <section class="upcoming">
+                <h2>
+                    <span>
+                        &dtrif;
+                    </span>
+                    Upcoming
+                </h2>
+                <ul class="style_none">
+                    <li style="line-height: 1.75rem">
+                        <span class="icon cross">
+                            &#10007;
+                        </span>
+                        Scheduled meeting with Alex
+                    </li>
+                    <li>
+                        <span class="icon check">
+                            &#10003;
+                        </span>
+                        Homepage refresh 
+                        <span class="badge badge_website">
+                            Website
+                        </span>
+                    </li>
+                    <li>
+                        <span class="icon check">
+                            &#10003;
+                        </span>
+                        Onboard new Sales team members
+                        <span class="badge badge_sales">
+                            Sales
+                        </span>
+                    </li>
+                    <li>
+                        <span class="icon check">
+                            &#10003;
+                        </span>
+                        Review editorial calendar 
+                        <span class="badge badge_editorial">
+                            Editorial
+                        </span>
+                    </li>
+                </ul>
+            </section>
        </div> 
        <!-- /.upcoming -->
     </main>
     <!-- /#site_main -->
+    <footer>
+        Made by Gianmarco Di Alessandro<span>&trade;</span>
+    </footer>
 </body>
 </html>
